test/importers/invalid/abort_message_reserved_column_name_importer.rb
require 'csv_party'

class AbortMessageReservedColumnNameImporter < CSVParty::Importer
  column :abort_message
end
